added connection with remote DB placed on heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,13 +15,14 @@ spring.view.suffix=.jsp
 #spring.jpa.hibernate.ddl-auto=create-drop
 
     #*******************************************************************************************
+
         # Connection url for the database "netgloo_blog"
-        spring.datasource.url = jdbc:mysql://localhost:3306/penta
+        spring.datasource.url =jdbc:postgresql://ec2-184-73-202-229.compute-1.amazonaws.com:5432/d5trs5uej51rc6?sslmode=require
 
         # Username and password
-        spring.datasource.username = root
-        spring.datasource.password = root
-        spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+         spring.datasource.username = sudbnpbunarumm
+         spring.datasource.password = KuM6K2C-JRTJpx7DA9Onlv-hvj
+         spring.datasource.driver-class-name= org.postgresql.Driver
 
         # Keep the connection alive if idle for a long time (needed in production)
         spring.datasource.testWhileIdle = true
@@ -46,8 +47,10 @@ spring.view.suffix=.jsp
         spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
         # Allows Hibernate to generate SQL optimized for a particular DBMS
-        spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+        spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
 
+        #Without this line connection won't work
+        spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults
     #****************************************************************************************************
 # Tomcat
 tomcat.accessLogEnabled=false
