--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- Postgres  -->
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.4.1208</version>
+        </dependency>
+
     </dependencies>
 
     <build>
