add RESTful WEBSERVICE, only get methods, add to Chapter class two Strings,

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 server.sessionTimeout=30
 
 # MVC
-spring.view.prefix=/WEB-INF/jsp/
+spring.view.prefix=/WEB-INF/
 spring.view.suffix=.jsp
 
 # JPA
