--- a/pom.xml
+++ b/pom.xml
@@ -91,13 +91,20 @@
             <artifactId>jstl</artifactId>
         </dependency>
 
-
         <!-- Postgres  -->
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.4.1208</version>
+        </dependency>
+
+        <!-- Jackson - convert DATA to JSON -->
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.7.4</version>
         </dependency>
 
     </dependencies>
